fix scrollbar style

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -67,11 +67,11 @@ ol, ul, menu{
 
 ::-webkit-scrollbar {
   width: 7px;
-  height: 7px;
+  height: 0;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #272727;
+  background: #1f1f1f;
   border-radius: 10px;
   border: 2px solid transparent;
   background-clip: padding-box;
